# hikim

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CONTINUE.md  NODES.md  README.md  ROADMAP.md
.github/workflows/: build.yml
Source/: Common.h  Main.cpp  MainComponent.cpp  MainComponent.h
Source/Engine/: Analysis.h  AudioEngine.cpp  AudioEngine.h  ClipPlayer.cpp  ClipPlayer.h  DspTables.h  MidiSource.cpp  MidiSource.h  Processors.cpp  Processors.h  Renderer.cpp  Renderer.h  StretchCache.cpp  StretchCache.h  Taps.h  TempoMap.cpp  TempoMap.h
Source/Model/: AutoGen.cpp  AutoGen.h  ClipOps.cpp  ClipOps.h  Ids.h  Session.cpp  Session.h
Source/Patcher/: PatcherEditor.cpp  PatcherEditor.h  PatcherProcessor.cpp  PatcherProcessor.h
Source/Plugins/: PluginHost.cpp  PluginHost.h
Source/Rack/: RackEditor.cpp  RackEditor.h  RackModules.cpp  RackModules.h  RackProcessor.cpp  RackProcessor.h
Source/UI/: BrowserPanel.cpp  BrowserPanel.h  ChainPanel.cpp  ChainPanel.h  Dialogs.cpp  Dialogs.h  Dock.h  Look.cpp  Look.h  MixerView.cpp  MixerView.h  NodeCanvas.cpp  NodeCanvas.h  NodeView.h  PatchView.cpp  PatchView.h  PianoRoll.cpp  PianoRoll.h  RoutingView.cpp  RoutingView.h  SampleEditor.cpp  SampleEditor.h  SessionGrid.cpp  SessionGrid.h  StatusBar.h  TimelineView.cpp  TimelineView.h  TransportBar.cpp  TransportBar.h  UIState.h  Updater.h
Tests/: Tests.cpp
docs/: UNIFIED_GRAPH.md  V2_LAYOUT.md  index.html  robots.txt  sitemap.xml
docs/assets/: site.css
installer/: hikim.iss
packaging/: build-flatpak.sh  io.github.willbearfruits.hikim.desktop
